Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-108763

Incorrect documentation for QWebEngineUrlRequestInterceptor.interceptRequest

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P3: Somewhat important
    • 6.8.1, 6.9.0 FF
    • 6.4.0
    • Documentation, WebEngine
    • None
    • - macos
      - python3.10
      - PyQt6==6.4.0
      - PyQt6-WebEngine==6.4.0
      - PyQt6-WebEngine-Qt6==6.4.0
    • macOS
    • bf159b231 (dev), 7a47e4017 (6.8), 6b792f05c (6.7)

    Description

      The following documentation seems to be incorrect:

      > Redirects this request to url. It is only possible to redirect requests that do not have payload data, such as GET requests.

      https://doc.qt.io/qt-6/qwebengineurlrequestinfo.html#redirect

      https://github.com/qt/qtwebengine/blob/aab31fcbabc6b913b7b7d70a38acdb2ef5493947/src/core/api/qwebengineurlrequestinfo.cpp#L250

       

      For POST requests the payload is included in the redirect. If you for instance redirect to a local webserver on localhost, the payload is included.

      I think this documentation is outdated, perhaps it was correct for WebKit. However, it doesn't seem to be correct for Chromium.

       

      Best Regards,

      Sam

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mibrunin Michael Bruning
            supersamu Sam VL
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes