Correct documentation for QWebEngineUrlReuqestInfo::redirect

It was incorrectly stating the redirect did not work for requests with
payload.

Fixes: QTBUG-108763
Change-Id: If9bbbad9ac514fae811356c28aac586d8f24cd2f
Reviewed-by: Michal Klocek <michal.klocek@qt.io>
(cherry picked from commit bf159b2312640bb43d9ef180405baa7fb67d0bc7)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 7a47e4017eca87f6ecbf4dfa766703f8746eaa3d)